--- a/ball.html
+++ b/ball.html
@@ -5,29 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-    อู่ช่างบอล ท่าทราย
+      Tailwind Starter Template - Landing Page Template: Tailwind Toolbox
     </title>
     <meta name="description" content="Simple landind page" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <!--Replace with your tailwind.css once created-->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+    <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
+    <style>
+      .gradient {
+        background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+      }
+    </style>
   </head>
-  <body class="leading-normal tracking-normal text-white gradient" style=" font-family: 'j.devilfontdrift-kingex_demIt';,'j.devilfontdrift-king_ex_deRg';">
+  <body class="leading-normal tracking-normal text-white gradient" style="font-family: 'Source Sans Pro', sans-serif;">
     <!--Nav-->
     <nav id="header" class="fixed w-full z-30 top-0 text-white">
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
           <a class="toggleColour text-white no-underline hover:no-underline font-bold text-2xl lg:text-4xl" href="#">
             <!--Icon from: http://www.potlabicons.com/ -->
-             
+            <svg class="h-8 fill-current inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512.005 512.005">
+              <rect fill="#2a2a31" x="16.539" y="425.626" width="479.767" height="50.502" transform="matrix(1,0,0,1,0,0)" />
+              <path
+                class="plane-take-off"
+                d=" M 510.7 189.151 C 505.271 168.95 484.565 156.956 464.365 162.385 L 330.156 198.367 L 155.924 35.878 L 107.19 49.008 L 211.729 230.183 L 86.232 263.767 L 36.614 224.754 L 0 234.603 L 45.957 314.27 L 65.274 347.727 L 105.802 336.869 L 240.011 300.886 L 349.726 271.469 L 483.935 235.486 C 504.134 230.057 516.129 209.352 510.7 189.151 Z "
+              />
+            </svg>
+            LANDING
           </a>
-        <h1><b>อู่ช่างบอล ท่าทราย</b>
-       </h1>  </div>
+        </div>
         <div class="block lg:hidden pr-4">
           <button id="nav-toggle" class="flex items-center p-1 text-pink-800 hover:text-gray-900 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
             <svg class="fill-current h-6 w-6" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <title>เมนู</title>
+              <title>Menu</title>
               <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
             </svg>
           </button>
@@ -59,20 +72,20 @@
       <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-          <p class="uppercase tracking-loose w-full">รับซ่อม รถมอเตอร์ไซร์ทุกอาการ</p>
+          <p class="uppercase tracking-loose w-full">What business are you?</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
-       ราคาย่อมเยาว์ บริการดี ไม่มีเลื้ยงไข้ ประสบการณ์ 10 ปี
+            Main Hero Message to sell yourself!
           </h1>
           <p class="leading-normal text-2xl mb-8">
-               รับปรึกษาอาการรถทุกอาการ ต่อพ่วงรถมอเตอร์ไซร์ ใช้เหล็กหนามาตรฐาน <br/>ยูทูป โซเชียลมีเดีย <br/>มีประสบการณ์ ผลงานเพียบ
+            Sub-hero message, not too long and not too short. Make it just right!
           </p>
-          <button class="mx-auto lg:mx-0 hover:underline bg-black text-white-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-            ติดต่อโฆษณา
+          <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
+            Subscribe
           </button>
         </div>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-50" src="hero.png" />
+          <img class="w-full md:w-4/5 z-50" src="img/hero5.png" />
         </div>
       </div>
     </div>
@@ -98,18 +111,18 @@
     <section class="bg-white border-b py-8">
       <div class="container max-w-5xl mx-auto m-8">
         <h1 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          ด้านการตลาด
+          Title
         </h1>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
         </div>
         <div class="flex flex-wrap">
           <div class="w-5/6 sm:w-1/2 p-6">
-            <h3 class="text-3xl text-red-800 font-bold leading-none mb-3">
-              เรามีกลุ่มเป้าหมายพร้อมให้คุณอยู่แล้ว
+            <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
+              Lorem ipsum dolor sit amet
             </h3>
             <p class="text-gray-600 mb-8">
-            สมาชิกกลุ่ม 1000+ โดยที่คุณไม่ต้องเริ่มเจาะกลุ่มเป้าหมายใหม่ ธุระกิจของคุณจะเติบโตไวขึ้นถ้าคุณเลือกเรา
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
               <br />
               <br />
 
