--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
           <h1 class="my-4 text-5xl font-bold leading-tight">
             การตลาด ออนไลน์ 
           </h1>
-          <p class="leading-normal text-2xl mb-8">
+          <p class="leading-normal text-2xl mb-8 dek">
          รับทำการตลาด เว็บคาสิโน สล็อต หวย กีฬา สายเทา สายดำ ทุกรูปแบบ ติดแบนเเนอร์ทุกเว็บในเครือเรา  
           </p>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
@@ -201,7 +201,7 @@
           <div class="flex-1 bg-white rounded-t rounded-b-none overflow-hidden shadow">
             <a href="#" class="flex flex-wrap no-underline hover:no-underline">
               <p class="w-full text-gray-600 text-xs md:text-sm px-6">
-                xGETTING STARTED
+                xGETTING S
               </p>
               <div class="w-full font-bold text-xl text-gray-800 px-6">
                 Lorem ipsum dolor sit amet.
